@startuml

package "com.ordercompleted.domain.event" {
    class OrderCompletedEvent {
        - orderId : String
    }
}

package "com.ordercompleted.domain.model" {
    class Order {
        - id : String
        - status : String
        --
        + Order(id : String, status : String)
        + complete() : void
    }
}

package "com.ordercompleted.domain.service" {
    class OrderDomainService {
        + completeOrder(order : Order) : void
    }
}

OrderDomainService --> Order : "uses"
Order --> OrderCompletedEvent : "generates"

@enduml
